Replace 'ranking_tenis.py' with 'codigo_general.py' in openFiles

--- a/devcontainer.json
+++ b/devcontainer.json
@@ -6,7 +6,7 @@
     "codespaces": {
       "openFiles": [
         "README.md",
-        "ranking_tenis.py"
+        "codigo_general.py"
       ]
     },
     "vscode": {
